--- a/src/main/resources/templates/usr/challenge/create_form.html
+++ b/src/main/resources/templates/usr/challenge/create_form.html
@@ -148,6 +148,26 @@
 
                     <div class="flex flex-col justify-center mt-[20px]">
                         <input type="submit" value="생성완료" class="btn btn-md btn-accent btn-success gap-3">
+
+                        <!-- The button to open modal -->
+                        <label for="my_modal_6" class="btn">생성 규칙 보기</label>
+
+                        <!-- Put this part before </body> tag -->
+                        <input type="checkbox" id="my_modal_6" class="modal-toggle" />
+                        <div class="modal">
+                            <div class="modal-box">
+                                <h3 class="font-bold text-lg">챌린지 생성 규칙</h3>
+                                <p class="py-4">1. 챌린지 제목은 중복될 수 없습니다.</p>
+                                <p class="py-4">2. 챌린지 제목은 25자 까지 작성 가능합니다.</p>
+                                <p class="py-4">3. 챌린지 내용은 500자 까지 작성 가능합니다.</p>
+                                <p class="py-4">4. 챌린지 시작일은 내일부터 지정 가능합니다.</p>
+                                <p class="py-4">5. 첨부 파일의 확장자 명은 JPG, JPEG, PNG, GIF 만 가능합니다.</p>
+
+                                <div class="modal-action">
+                                    <label for="my_modal_6" class="btn">닫기 X</label>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
