Feat: create_form toast ui 알림 처리 function-CreateForm__submit을 통해 프론트에서 사전 차단

--- a/src/main/resources/templates/usr/challenge/create_form.html
+++ b/src/main/resources/templates/usr/challenge/create_form.html
@@ -11,11 +11,37 @@
 
     <script th:inline="javascript">
 
-        function LikeForm__submit(form) {
+        function CreateForm__submit(form) {
 
-            if (form.title.length === 10) {
-                toastWarning('상대방의 인스타그램 아이디를 입력해주세요.');
+            if (form.title.value.length > 25 ) {
+                toastWarning('챌린지 제목은 25자 까지 가능합니다.');
                 form.title.focus();
+                console.log('제대로 됩니까?');
+                return;
+            }
+
+            if(form.contents.value.length > 500){
+                toastWarning('챌린지 내용은 500자 까지 작성 가능합니다.');
+                form.contents.focus();
+                return;
+            }
+
+            var today = new Date();
+            var selectedDate = new Date(form.startDate.value);
+
+            if(selectedDate <= today){
+                toastWarning('챌린지 시작일은 오늘 이후로 설정해야 합니다.');
+                form.startDate.focus();
+                return;
+            }
+
+            var fileInput = document.getElementById('img');
+            var fileName = fileInput.value;
+            var allowedExtensions = /(\.jpg|\.jpeg|\.png|\.gif)$/i;
+
+            if (!allowedExtensions.exec(fileName)) {
+                toastWarning('첨부 파일의 확장자는 JPG, JPEG, PNG, GIF만 가능합니다.');
+                fileInput.value = '';
                 return;
             }
 
@@ -27,7 +53,7 @@
     <div class="flex flex-1 justify-center items-center">
         <form method="post" th:action="@{/usr/challenge/create}"
               enctype="multipart/form-data" class="flex flex-col justify-center items-center w-full"
-              onsubmit="LikeForm__submit(this); return false;">
+              onsubmit="CreateForm__submit(this); return false;">
             <div class="card bg-white">
                 <div class="w-full p-10 lg:w-[65rem]">
                     <p class="text-[25px] bolder">챌린지 생성</p>
