Fix: Challenge front fix 챌린지 사소한 픽스

--- a/src/main/resources/templates/usr/challenge/create_form.html
+++ b/src/main/resources/templates/usr/challenge/create_form.html
@@ -144,11 +144,12 @@
                                     <select name="language" class="select select-accent w-70 max-w-xs">
                                         <option disabled selected>공부하고 싶은 언어</option>
                                         <option>Java</option>
-                                        <option>Go</option>
+                                        <option>Ruby</option>
+                                        <option>React</option>
+                                        <option>Kotlin</option>
                                         <option>C</option>
                                         <option>C#</option>
                                         <option>C++</option>
-                                        <option>Rust</option>
                                         <option>JavaScript</option>
                                         <option>Python</option>
                                     </select>
@@ -161,7 +162,6 @@
                                         <option value="study">개념 공부</option>
                                         <option value="test">시험 대비</option>
                                         <option value="solving">예제 풀기</option>
-
                                     </select>
 
                                     <select name="posttype" class="select select-accent w-70 max-w-xs">
