--- a/src/main/resources/templates/usr/member/store.html
+++ b/src/main/resources/templates/usr/member/store.html
@@ -19,7 +19,7 @@
             }
         }
         function changeEquip(itemId) {
-            if (confirm('착용 하시겠습니까?' + itemId)) {
+            if (confirm('착용 하시겠습니까?')) {
                 location.href = "/usr/inventory/change/" + itemId;
             }
         }
