--- a/src/main/resources/templates/usr/challenge/list.html
+++ b/src/main/resources/templates/usr/challenge/list.html
@@ -6,7 +6,7 @@
     <tr th:each="challenge : ${challengeList}">
         <div>
             <td>
-                <a th:href="@{|/usr/challenge/detail/${challenge.id}|}" th:text="${challenge.challengeName}"></a>
+                <a th:href="@{|/usr/challenge/detail/${challenge.id}|}" th:tgext="${challenge.challengeName}"></a>
             </td>
 
             <td th:text="${challenge.challengeContents}"></td>
