--- a/src/main/resources/templates/usr/challenge/create_form.html
+++ b/src/main/resources/templates/usr/challenge/create_form.html
@@ -13,14 +13,14 @@
 
         function CreateForm__submit(form) {
 
-            if (form.title.value.length > 25 ) {
+            if (form.title.value.length > 25) {
                 toastWarning('챌린지 제목은 25자 까지 가능합니다.');
                 form.title.focus();
                 console.log('제대로 됩니까?');
                 return;
             }
 
-            if(form.contents.value.length > 500){
+            if (form.contents.value.length > 500) {
                 toastWarning('챌린지 내용은 500자 까지 작성 가능합니다.');
                 form.contents.focus();
                 return;
@@ -29,7 +29,7 @@
             var today = new Date();
             var selectedDate = new Date(form.startDate.value);
 
-            if(selectedDate <= today){
+            if (selectedDate <= today) {
                 toastWarning('챌린지 시작일은 오늘 이후로 설정해야 합니다.');
                 form.startDate.focus();
                 return;
@@ -50,144 +50,135 @@
     </script>
 
     <!-- FIXME 챌린지별 사진으로 변경?-->
-    <div class="flex flex-1 justify-center items-center">
-        <form method="post" th:action="@{/usr/challenge/create}"
-              enctype="multipart/form-data" class="flex flex-col justify-center items-center w-full"
-              onsubmit="CreateForm__submit(this); return false;">
-            <div class="card bg-white">
-                <div class="w-full p-10 lg:w-[65rem]">
-                    <p class="text-[25px] bolder">챌린지 생성</p>
-                    <div class="flex flex-col gap-4 justify-center lg:flex-row">
-                        <div class="flex flex-col space-y-4  flex-1">
-                            <div>
-                                <div class="w-full">
-                                    <label for="title" class="label">
-                                        <span class="text-gray-400">챌린지 제목</span>
-                                    </label>
-                                    <input type="text" name="title" maxlength="30" placeholder="챌린지명"
-                                           class="input input-bordered w-full form-control text-black" id="title"
-                                           autofocus/>
-                                </div>
-                            </div>
+    <div class="flex items-center content-center h-screen">
+        <form method="post" th:action="@{/usr/challenge/create}" enctype="multipart/form-data"
+              class="flex flex-col items-center w-full" onsubmit="CreateForm__submit(this); return false;">
+            <div class="w-full h-1/8"></div>
+            <div class="card bg-white flex-1 justify-around content-around">
+                <div class="flex flex-row  ml-14 mt-5">
+                    <h1 class="text-[25px] font-black">챌린지 생성</h1>
+                    <p class="ml-8 mt-2">원하는 챌린지를 생성해 보세요!</p>
+                </div>
+                <div class="w-1/2 p-5 lg:w-[65rem] flex flex-row justify-around content-around">
+                    <div class="flex flex-col">
+                        <label for="title" class="label">
+                            <span class="text-gray-400">챌린지 제목</span>
+                        </label>
+                        <input type="text" name="title" maxlength="30" placeholder="챌린지명"
+                               class="input input-bordered w-full form-control text-black input-accent" id="title"
+                               autofocus/>
 
-                            <div>
-                                <div class="w-full">
-                                    <label class="label">
-                                        <span class="text-gray-400">챌린지 시작일 선택</span>
-                                    </label>
-                                    <input type="date" name="startDate" class="text-black select select-accent"/>
-                                </div>
-                            </div>
+                        <label for="contents" class="label mt-3">
+                            <span class="text-gray-400">챌린지 내용</span>
+                        </label>
+                        <textarea rows="6" name="contents" placeholder="챌린지내용"
+                                  class="textarea textarea-accent w-full form-control text-black"
+                                  id="contents"></textarea>
 
-                            <div>
-                                <div class="w-full">
-                                    <label class="label">
-                                        <span class="text-gray-400">챌린지 기간 선택</span>
-                                    </label>
-                                    <select name="period" class="select select-accent w-70 max-w-xs">
-                                        <option>2주</option>
-                                        <option>3주</option>
-                                        <option>4주</option>
-                                        <option>6주</option>
-                                        <option>8주</option>
-                                        <option>12주</option>
-                                    </select>
-                                </div>
-                            </div>
+                        <div class="flex flex-col mt-3">
+                            <label class="tag">
+                                <span class="text-gray-400">챌린지 태그 설정</span>
+                            </label>
+                            <div class="flex flex-row gap-3">
+                                <select name="language" class="select select-accent max-w-xs">
+                                    <option disabled selected>공부하고 싶은 언어</option>
+                                    <option>Java</option>
+                                    <option>Ruby</option>
+                                    <option>React</option>
+                                    <option>Kotlin</option>
+                                    <option>C</option>
+                                    <option>C#</option>
+                                    <option>C++</option>
+                                    <option>JavaScript</option>
+                                    <option>Python</option>
+                                </select>
 
-                            <div>
-                                <div class="w-full">
-                                    <label class="label">
-                                        <!-- 공개여부 UI 재설정 필요-->
-                                        <label class="label">
-                                            <span class="text-gray-400">공개 여부</span>
-                                        </label>
-                                    </label>
-                                    <input type="radio" name="status" id="public" value=true class="radio radio-accent"
-                                           checked>공개
-                                    <input type="radio" name="status" id="private" value=false
-                                           class="radio radio-accent">비공개
-                                </div>
-                            </div>
+                                <select name="subject" class="select select-accent max-w-xs">
+                                    <option disabled selected>공부 주제</option>
+                                    <option value="project">프로젝트</option>
+                                    <option value="coding">코딩테스트</option>
+                                    <option value="algorithm">알고리즘</option>
+                                    <option value="study">개념 공부</option>
+                                    <option value="test">시험 대비</option>
+                                    <option value="solving">예제 풀기</option>
+                                </select>
 
-                            <div>
-                                <div class="w-full">
-                                    <label class="label">
-                                        <!-- 인증 주기 UI 재설정 필요-->
-                                        <span class="text-gray-400">챌린지 주기를 선택해 주세요</span>
-                                    </label>
-                                    <input type="radio" name="frequency" value="day1" class="radio radio-accent" checked>주 1회
-                                    <input type="radio" name="frequency" value="day3" class="radio radio-accent">주 3회
-                                    <input type="radio" name="frequency" value="day5" class="radio radio-accent">주 5회
-                                    <input type="radio" name="frequency" value="day7" class="radio radio-accent">매일(주 7회)
-                                </div>
+                                <select name="posttype" class="select select-accent max-w-xs">
+                                    <option disabled selected>인증 방식</option>
+                                    <option>Github</option>
+                                    <option>블로그</option>
+                                    <option>IDE 캡처</option>
+                                    <option>인증샷</option>
+                                </select>
                             </div>
                         </div>
-                        <div class="flex flex-col space-y-4 flex-1">
-                            <div>
-                                <div class="w-full">
-                                    <label for="contents" class="label">
-                                        <span class="text-gray-400">챌린지 내용</span>
-                                    </label>
-                                    <textarea rows="7" name="contents" placeholder="챌린지내용"
-                                              class="textarea textarea-accent w-96 form-control text-black"
-                                              id="contents"></textarea>
-                                </div>
+                    </div>
+
+                    <div class="flex flex-col">
+                        <div class="flex flex-row gap-4">
+                            <div class="flex-col">
+                                <label class="label">
+                                    <span class="text-gray-400">챌린지 시작일 선택</span>
+                                </label>
+                                <input type="date" name="startDate" class="text-black select select-accent"/>
                             </div>
 
-                            <div>
-                                <div class="w-full">
-                                    <label class="tag">
-                                        <span class="text-gray-400">챌린지 태그 설정</span>
-                                    </label>
-                                    <div></div>
-                                    <select name="language" class="select select-accent w-70 max-w-xs">
-                                        <option disabled selected>공부하고 싶은 언어</option>
-                                        <option>Java</option>
-                                        <option>Ruby</option>
-                                        <option>React</option>
-                                        <option>Kotlin</option>
-                                        <option>C</option>
-                                        <option>C#</option>
-                                        <option>C++</option>
-                                        <option>JavaScript</option>
-                                        <option>Python</option>
-                                    </select>
-
-                                    <select name="subject" class="select select-accent w-70 max-w-xs">
-                                        <option disabled selected>공부 주제</option>
-                                        <option value="project">프로젝트</option>
-                                        <option value="coding">코딩테스트</option>
-                                        <option value="algorithm">알고리즘</option>
-                                        <option value="study">개념 공부</option>
-                                        <option value="test">시험 대비</option>
-                                        <option value="solving">예제 풀기</option>
-                                    </select>
-
-                                    <select name="posttype" class="select select-accent w-70 max-w-xs">
-                                        <option disabled selected>인증 방식</option>
-                                        <option>Github</option>
-                                        <option>블로그</option>
-                                        <option>IDE 캡처</option>
-                                        <option>인증샷</option>
-                                    </select>
-
-                                </div>
+                            <div class="flex-col">
+                                <label class="label">
+                                    <span class="text-gray-400">챌린지 기간 선택</span>
+                                </label>
+                                <select name="period" class="select select-accent w-70 max-w-xs">
+                                    <option>2주</option>
+                                    <option>3주</option>
+                                    <option>4주</option>
+                                    <option>6주</option>
+                                    <option>8주</option>
+                                    <option>12주</option>
+                                </select>
                             </div>
+                        </div>
 
-                            <div>
-                                <div class="w-full">
-                                    <label for="img" class="label">
-                                        <span class="text-gray-400">챌린지 대표 이미지</span>
-                                    </label>
-                                    <input id="img" name="file" type="file"
-                                           class="file-input file-input-bordered file-input-accent w-full max-w-xs"/>
-                                </div>
+                        <div>
+                            <label class="label mt-3 ml-10px">
+                                <!-- 인증 주기 UI 재설정 필요-->
+                                <span class="text-gray-400">인증 주기 선택</span>
+                            </label>
+                            <div class="flex flex-row justify-around">
+                                <input type="radio" name="frequency" value="day1" class="radio radio-accent" checked>주 1회
+                                <input type="radio" name="frequency" value="day3" class="radio radio-accent">주 3회
+                                <input type="radio" name="frequency" value="day5" class="radio radio-accent">주 5회
+                                <input type="radio" name="frequency" value="day7" class="radio radio-accent">매일
                             </div>
+                        </div>
 
-                            <label for="my_modal_6" class="btn">생성 규칙 보기</label>
+                        <div>
+                            <label class="label mt-3 ml-8px">
+                                <!-- 공개여부 UI 재설정 필요-->
+                                <label class="label">
+                                    <span class="text-gray-400">공개 여부</span>
+                                </label>
+                            </label>
+                            <div class="flex flex-row justify-around">
+                                <input type="radio" name="status" id="public" value=true class="radio radio-accent"
+                                       checked>공개
+                                <input type="radio" name="status" id="private" value=false
+                                       class="radio radio-accent">비공개
+                            </div>
+                        </div>
 
-                            <input type="checkbox" id="my_modal_6" class="modal-toggle modal-warning" />
+                        <div class="mt-3">
+                            <label for="img" class="label">
+                                <span class="text-gray-400">챌린지 대표 이미지</span>
+                            </label>
+                            <input id="img" name="file" type="file"
+                                   class="file-input file-input-bordered file-input-accent w-full max-w-xs justify-center"/>
+                        </div>
+
+
+                        <div class="flex flex-row justify-around mt-3">
+                            <label for="my_modal_6" class="btn btn-md btn-warning gap-3">생성 규칙 보기</label>
+
+                            <input type="checkbox" id="my_modal_6" class="w-1/3 modal-toggle modal-warning"/>
                             <div class="modal">
                                 <div class="modal-box">
                                     <h3 class="font-bold text-lg">챌린지 생성 규칙</h3>
@@ -198,21 +189,19 @@
                                     <p class="py-4">5. 첨부 파일의 확장자 명은 JPG, JPEG, PNG, GIF 만 가능합니다.</p>
                                     <p class="py-4">6. 이미지가 첨부되지 않은 경우, 기본 이미지로 설정 됩니다.</p>
                                     <div class="modal-action">
-                                        <label for="my_modal_6" class="btn">닫기 X</label>
+                                        <label for="my_modal_6" class="btn btn-md">닫기 X</label>
                                     </div>
                                 </div>
                             </div>
 
+                            <input type="submit" value="생성완료" class="w-1/3 btn btn-md btn-success gap-3">
                         </div>
-                    </div>
 
-                    <div class="flex flex-col justify-center mt-[20px]">
-                        <input type="submit" value="생성완료" class=" w-200 btn btn-md btn-accent btn-success gap-3">
                     </div>
 
                 </div>
-
             </div>
+            <div class="w-full h-1/8"></div>
         </form>
     </div>
 </main>
