--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -39,7 +39,7 @@
 
                 <th:block th:if="${isJoin}">
                     <a th:href="@{|/usr/challenge/write_form/${challenge.id}|}"
-                       class="btn btn-notice mx-2">
+                       class="btn btn-accent mx-2">
                         <button>인증하기</button>
                     </a>
                 </th:block>
@@ -50,19 +50,20 @@
                         <h1 class="text-[20px] font-extrabold">챌린지 일정</h1>
                         <h1 class="text-[20px] font-extrabold mt-5">챌린지 인원</h1>
                         <h1 class="text-[20px] font-extrabold mt-5">주간 인증 횟수</h1>
-                        <h1 class="text-[20px] font-extrabold mt-5">챌린지 개설자명</h1>
+                        <h1 class="text-[20px] font-extrabold mt-5">챌린지 개설자</h1>
                         <h1 class="text-[20px] font-extrabold mt-5">챌린지 태그</h1>
+                        <h1 class="text-[20px] font-extrabold mt-5">총 인증 게시물 수</h1>
                     </div>
                     <div class="w-70  content-center items-center">
                         <p class="text-[20px] bolder-double"
-                           th:text="${challenge.startDate} + ' 시작 =>  ' + ${challenge.challengePeriod} + '주 과정'"></p>
+                           th:text="${challenge.startDate} + ' ~ ' + ${challenge.endDate}"></p>
                         <div class="badge badge-lg badge-outline gap-3 mt-5">
                             <i class="fa-solid fa-person fa-lg" style="color: #000000;"></i>
                             <p class="text-black"> -no- 명</p>
                         </div>
                         <p class="text-[20px] bolder-double mt-5"
                            th:text="'주 ' + ${challenge.challengeFrequency} + '회'"></p>
-                        <p class="text-[20px] bolder-double mt-5">챌린지 만든 사람 이름은?</p>
+                        <p class="text-[20px] bolder-double mt-5" th:text="${challenge.challengeCreator}"></p>
                         <div class="mt-6">
                             <p class="badge badge-warning text-[20px] bolder-double badge-lg"
                                th:text="${challenge.challengeLanguage}"></p>
@@ -71,6 +72,13 @@
                             <p class="badge badge-notice text-[20px] bolder-double badge-lg"
                                th:text="${challenge.challengePostType}"></p>
                         </div>
+                        <th:block th:unless="${hasPost}">
+                            <p class="text-[20px] bolder-double mt-5"> 0 개</p>
+                        </th:block>
+                        <th:block th:if="${hasPost}">
+                            <p class="text-[20px] bolder-double mt-5" th:text="${#lists.size(challengePostList)} + '개'"></p>
+                        </th:block>
+
                     </div>
                 </div>
             </div>
@@ -78,12 +86,12 @@
     </div>
 
     <div>
-        <div class="flex flex-wrap justify-around h-1/2 mt-4">
+        <div class="flex flex-wrap justify-around h-1/2 mt-14">
             <div class="w-1/8 h-full"></div>
             <div class="card bg-gray-200 w-3/4 h-full ml-20">
                 <div class="flex flex-col h-full">
-                    <h1 class="text-[20px] font-extrabold mt-5 ml-4">Challenge Introduction</h1>
-                    <p class="text-[15px] font-double mt-5 ml-4" th:text="${challenge.challengeContents}"></p>
+                    <h1 class="text-[20px] font-black mt-5 mx-8">Challenge Introduction</h1>
+                    <p class="text-[15px] font-double mt-5 mx-14" th:text="${challenge.challengeContents}"></p>
                 </div>
             </div>
             <div class="w-1/8 h-full"></div>
@@ -91,25 +99,28 @@
 
         <br/>
 
-        <div class="flex flex-wrap justify-around mt-15">
+        <div class="flex flex-wrap justify-around mt-14">
             <div class="w-1/8 h-full"></div>
             <div class="card bg-gray-200 w-3/4 h-full ml-20">
                 <div class="flex flex-col h-1/2">
                     <th:block th:unless="${hasPost}">
-                        <h2 class="text-[20px] bolder-double font-bold">아직 아무도 인증하지 않았어요!</h2>
+                        <h2 class="text-[20px] font-black mt-5 mx-8">아직 아무도 인증하지 않았어요!</h2>
                     </th:block>
 
-                    <div class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-4 gap-[50px] bg-white-500 mx-15 my-10">
+                    <div class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-4 gap-[50px] bg-white-500 my-10">
                         <th:block th:if="${hasPost}">
                             <!-- 인증글 내용 -->
                             <div th:each="post : ${challengePostList}">
-                                <div class="card w-[200px] shadow-xl">
+                                <div class="card w-[200px] shadow-xl mx-8">
                                     <figure>
-                                        <img th:src="${post.smallPhoto}" alt="post_image" class="rounded-xl w-[90%]"/>
+                                        <img th:src="${post.smallPhoto}" alt="post_image"
+                                             class="rounded-xl w-[90%] mt-3"/>
                                     </figure>
                                     <div class="card-body">
-                                        <h2 class="card-title" th:text="${post.postTitle}"></h2>
-                                        <p th:text="${post.postContents}"></p>
+                                        <h2 class="card-title"
+                                            th:text="${#strings.length(post.postTitle) &gt; 10 ? #strings.substring(post.postTitle, 0, 10) + '...' : post.postTitle}"></h2>
+
+                                        <p th:text="${#strings.length(post.postContents) &gt; 15 ? #strings.substring(post.postContents, 0, 15) + '...' : post.postContents}"></p>
                                         <div class="card-actions justify-end">
                                             <a class="btn btn-accent"
                                                th:href="@{|/usr/challenge/postdetail/${post.id}|}">보러가기</a>
