--- a/src/main/resources/templates/usr/challenge/postdetail.html
+++ b/src/main/resources/templates/usr/challenge/postdetail.html
@@ -20,10 +20,14 @@
             }
         }
 
-        function wantReport(postId) {
+        function wantReport(postId, loginId, creatorId) {
             if (confirm('정말로 신고 하시겠습니까?')) {
-                alert(postId + "번 인증글을 신고합니다.");
-                location.href = "/usr/challenge/report/" + postId;
+                if (creatorId === loginId) {
+                    alert("자신의 글은 신고할 수 없습니다.");
+                } else {
+                    alert(postId + "번 인증글을 신고합니다.");
+                    location.href = "/usr/challenge/report/" + postId;
+                }
             } else {
                 alert("신고를 취소합니다.");
             }
@@ -64,9 +68,9 @@
                     </button>
                 </div>
 
+
                 <div class="pr-4 flex flex-row justify-end">
-                    <button th:onclick="'wantReport(\'' + ${post.id} + '\')'">
-<!--                        다른 아이콘이 안 뜸;;-->
+                    <button th:attr="onclick='wantReport(\'' + ${post.id} + '\', \'' + ${@rq.member.loginID} + '\', \'' + ${post.creatorId} + '\')'">
                         <i class="fa-solid fa-heart" style="color: #da1010;"></i>
                     </button>
                 </div>
