--- a/src/main/resources/templates/usr/challenge/postdetail.html
+++ b/src/main/resources/templates/usr/challenge/postdetail.html
@@ -52,9 +52,20 @@
                     <img class="mt-10" th:src="${post.largePhoto}" alt="post_image"/>
                 </div>
 
+<!--                <div class="w-full p-10 lg:w-[65rem]">-->
+<!--                    <span class="badge badge-md">자기 평가</span>-->
+<!--                    <h3 class="text-lg font-bold mx-3" th:text="${post.postScore}"></h3>-->
+<!--                </div>-->
+
                 <div class="w-full p-10 lg:w-[65rem]">
-                    <span class="badge badge-md">자기 평가</span>
-                    <h3 class="text-lg font-bold mx-3" th:text="${post.postScore}"></h3>
+                    <div class="flex">
+                        <div th:each="i : ${#numbers.sequence(1, post.postScore)}" class="mx-1">
+                            <i class="fa-sharp fa-solid fa-star fa-xl" style="color: #40dd84;"></i>
+                        </div>
+                        <div th:each="i : ${#numbers.sequence(5 - post.postScore, 1, -1)}" class="mx-1">
+                            <i class="fa-regular fa-star fa-xl" style="color: #40dd84;"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <th:unless th:if="${@rq.member.loginID}==${post.creatorId}">
@@ -73,7 +84,7 @@
 
                 <div class="pr-4 flex flex-row justify-end">
                     <button th:attr="onclick='wantReport(\'' + ${post.id} + '\', \'' + ${@rq.member.loginID} + '\', \'' + ${post.creatorId} + '\')'">
-                        <i class="fa-solid fa-heart" style="color: #da1010;"></i>
+                        <i class="fa-solid fa-bell" style="color: #fb1818;"></i>
                     </button>
                 </div>
 
