내부상점 폰트 색상 변경 기능 구현 (#103)
* Feat: 멤버 정보 가져오기, 구매 버튼 활성화

* chore: fix complete

* 버그 수정

* Feat: 내부상점 인벤토리 추가

* 버그  수정

* Feat: Apply item-font subPattern

* Feat: Add item equip function

* Feat: DB와 상점, 마이페이지 인벤토리 연동

* Chore: fix to conflict

* Feat: Add User invetory in store

* Feat: 마이페이지, 상점 인벤토리에서 장착 기능 추가

* Doc: Change equip confrim message

---------

Co-authored-by: Y39 <rla4878@gmail.com>

--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -23,11 +23,13 @@
     </script>
 
 
+
     <div class="flex justify-center items-center mt-5">
         <div>
             <img th:src="${challenge.largePhoto}" alt="challenge_image"/>
         </div>
     </div>
+
 
     <div class="flex flex-col w-full">
 
@@ -116,6 +118,7 @@
             <div class="w-1/5"></div>
         </div>
     </div>
+</div>
 
 </main>
 </body>
