--- a/src/main/resources/templates/usr/member/layout.html
+++ b/src/main/resources/templates/usr/member/layout.html
@@ -56,8 +56,10 @@
             font-family: 'NanumSquare';
             text-underline-position: under;
         }
+
     </style>
-    <title layout:title-pattern="$CONTENT_TITLE | $LAYOUT_TITLE">DevChall</title>
+
+    <title layout:title-pattern="$CONTENT_TITLE | $LAYOUT_TITLE" >DevChall</title>
 </head>
 
 <body class="bg-[#F2F4F4] text-black min-h-screen flex flex-col">
@@ -85,11 +87,20 @@
 
         </div>
         <div class="navbar-end" >
-
+            <a th:if="${@rq.login}" href="/usr/member/store" class="btn btn-sm btn-primary mx-2">내부상점</a>
             <a th:if="${@rq.login}" href="/usr/challenge/create" class="btn btn-sm btn-primary mx-2">챌린지 생성</a>
             <a th:if="${@rq.logout}" href="/usr/member/join" class="btn btn-sm btn-outline btn-accent mx-2">회원가입</a>
             <a th:if="${@rq.logout}" href="/usr/member/login" class="btn btn-sm bg-accent mx-2">로그인</a>
-            <a th:if="${@rq.login}" href="/usr/member/me" class="badge badge-accent font-bold" th:text="${@rq.member.nickname}"></a>
+
+<!--            <a th:if="${@rq.login}" href="usr/member/me" class="badge badge-accent font-bold" th:text="${@rq.member.nickname}"></a>-->
+            <a href="/usr/member/me"
+               th:style="'color: #' + ${@rq.member.equippedFont.item.subPattern} +
+                       '; background: #'+${@rq.member.equippedFont.item.pattern}+' !important'"
+               th:if="${@rq.login}"
+               class="btn btn-xs rounded-lg font-bold mx-1"
+               th:text="${@rq.member.nickname}">
+            </a>
+
             <form th:action="|/usr/member/logout|" method="post" class="m-0">
                 <button th:if="${@rq.login}" type="submit" class="btn btn-sm btn-ghost"> 로그아웃</button>
             </form>
