--- a/src/main/resources/templates/usr/member/me.html
+++ b/src/main/resources/templates/usr/member/me.html
@@ -10,7 +10,15 @@
 </head>
 
 <body>
+
 <main layout:fragment="main" class="flex flex-col w-full min-h-screen">
+    <script>
+    function changeEquip(itemId) {
+        if (confirm('착용 하시겠습니까?')) {
+            location.href = "/usr/inventory/me/change/" + itemId;
+        }
+    }
+</script>
     <div class="card lg:card-side bg-base-100 shadow-xl" style="margin: 20px; padding-left: 40px; padding-right: 40px">
         <div class="card-body">
             <h2 class="card-title font-bold w-[80%]">마이 페이지</h2>
@@ -23,7 +31,17 @@
                                 <img class="rounded-full" src="https://kr.object.ncloudstorage.com/devchall/devchall_img/person.png" />
                             </div>
                         </div>
-                        <h3 class="text-3xl" th:text="${@rq.member.loginID}"></h3>
+<!--                        <h3 class="text-3xl" th:text="${@rq.member.loginID}"></h3>-->
+
+                        <h3 class="text-3xl rounded-xl"
+                            th:style="'color: #' + ${@rq.member.equippedFont.item.subPattern} +'; background: #'+${@rq.member.equippedFont.item.pattern}"
+                            th:if="${@rq.login}"
+                            th:text="${@rq.member.loginID}">
+                        </h3>
+
+
+
+
                         <div class="flex justify-around">
                             <h3 class="text-2xl" th:text="${@rq.member.nickname}"></h3>
                             <a class="btn btn-sm mx-2" >변경</a>
@@ -88,12 +106,20 @@
                         </div>
                     </div>
                     <div class="bg-gray-100 h-[200px] p-[20px] rounded-xl">
-                        <div>
-                            <h3 class="text-xl font-bold">나의 인벤토리</h3>
-                                <div>
-                                    <span class="text-lg">기본 색상</span>
-                                    <div class="bg-black h-12 w-20 pb-7"></div>
+                        <h3 class="text-xl font-bold">나의 인벤토리</h3>
+                        <div class="grid grid-col-1 xl:grid-cols-4 gap-[10px]">
+
+<!--                                <div>-->
+<!--                                    <span class="text-lg">기본 색상</span>-->
+<!--                                    <div class="bg-black h-12 w-20 pb-7"></div>-->
+<!--                                </div>-->
+                            <div style="cursor: pointer" th:each="inventory:${@rq.member.inventoryList}"
+                                 th:onclick="'changeEquip('+${inventory.item.id}+')'">
+                                <div class="h-12 w-20 flex justify-center items-center"
+                                     th:style="'background-color: #'+${inventory.item.pattern}+';'">
+                                    <div th:if="${inventory.equipped}" class="badge badge-accent">착용중</div>
                                 </div>
+                            </div>
                         </div>
                     </div>
                 </article>
