--- a/src/main/resources/templates/usr/member/store.html
+++ b/src/main/resources/templates/usr/member/store.html
@@ -7,6 +7,24 @@
 <body>
 
 <main layout:fragment="main" body class="bg-[#121212] w-full flex-col flex">
+
+    <script>
+        function showBuy(itemId) {
+            if (!confirm('정말로 구매하시겠습니까?')) {
+                alert("구매가 취소되었습니다");
+
+            } else {
+                <!-- 구매 관련 메서드 들어갈 자리-->
+                location.href = "/usr/member/store/buy/" + itemId + "?equipped=" + confirm('바로 착용하시겠습니까?');
+            }
+        }
+        function changeEquip(itemId) {
+            if (confirm('착용 하시겠습니까?')) {
+                location.href = "/usr/inventory/change/" + itemId;
+            }
+        }
+    </script>
+
     <div class="gap-75px flex">
         <div id="inven" class="bg-black col-span-1 md:col-span-3 xl:col-span-3"
              style="border-top-left-radius: 8rem; height: 92.3rem; left: 0; top: 7rem; width: calc(100% / 3);">
@@ -23,29 +41,42 @@
                 </a>
             </div>
 
-            <div class="flex justify-center items-center">
+            <div class="flex justify-center items-center" th:if="${@rq.login}">
                 <div class="flex justify-center bg-[#03fa6e] rounded-[1.5rem] flex-shrink-0 h-[4rem] mx-[18rem] mt-20"
                      style="width: 200px;">
-                    <span class="mt-4 text-[#000000] font-bold text-xl">유저 닉네임</span>
+                    <a class="mt-4 text-[#313131] font-bold text-xl"  th:text="${@rq.member.nickname}"></a>
+<!--                    <a href="usr/member/me"-->
+<!--                       th:style="'color: #' + ${rq.member.equippedFont.item.subPattern} + '; background: #'+${rq.member.equippedFont.item.pattern}+' !important'"-->
+<!--                       th:if="${rq.login}"-->
+<!--                       class="mt-4 text-xl font-bold"-->
+<!--                       th:text="${rq.member.nickname}">-->
+<!--                    </a>-->
                 </div>
             </div>
 
-            <div class="flex justify-center items-center">
+
+
+
+
+            <div class="flex justify-center items-center" th:if="${@rq.login}">
                 <div class="flex justify-center bg-[#000000] rounded-[4.3444rem] flex-shrink-0 h-[4rem] mx-[18rem] w-[calc(100% - 30rem)] mt-20 border border-[#03fa6e]"
                      style="width: 200px;">
-                    <span class="mt-4 text-[#03fa6e] font-bold text-xl">1,000 Point</span>
+                    <a class="mt-4 text-[#03fa6e] font-bold text-xl" th:text="${@rq.member.point.currentPoint + 'point'}">point</a>
                 </div>
             </div>
 
-            <div id="center"
-                 class="px-30 m-20 bg-[#313131] rounded-[1.7rem] h-[20rem] top-[48.2rem] w-[20rem] flex justify-center items-center">
-                <button class="flex items-center justify-center w-12 h-12 bg-[#000000] rounded-full text-white">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24"
-                         stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
-                    </svg>
-                </button>
+            <div id="center" class="px-30 m-20 bg-[#313131] round-[1.7rem] h-[20rem] top-[48.2rem] w-[20rem] flex justify-center items-center">
+                <div class="grid grid-cols-1 xl:grid-cols-3 gap-[10px]" th:if="${@rq.login}">
+                    <div style="cursor: pointer" th:each="inventory:${@rq.member.inventoryList}"
+                       th:onclick="'changeEquip('+${inventory.item.id}+')'">
+                        <div class="w-[85px] h-[85px] flex justify-center items-center"
+                             th:style="'background-color: #'+${inventory.item.pattern}+';'">
+                            <div th:if="${inventory.equipped}" class="badge badge-accent">착용중</div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
         </div>
 
         <!--아이템 목록-->
@@ -58,54 +89,20 @@
                          style="width: 200px;">
                         <span class="mt-4 text-[#000000] font-bold text-xl">Font Color</span>
                     </div>
-
-                    <div class="card p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
-                        <div class="mx-10 mt-5 justify-center" style="display: flex; justify-content: center; align-items: center; width: 100px; height: 100px; background-color: #FCE411;"></div>
-                        <div class="flex flex-col justify-end items-end mt-7 space-y-6">
-                            <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
-                                <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
-                        <div class="mx-10 mt-5 justify-center" style="display: flex; justify-content: center; align-items: center; width: 100px; height: 100px; background-color: #ED3096;"></div>
-                        <div class="flex flex-col justify-end items-end mt-7 space-y-6">
-                            <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
-                                <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
-                        <div class="mx-10 mt-5 justify-center" style="display: flex; justify-content: center; align-items: center; width: 100px; height: 100px; background-color: #1144FC;"></div>
-                        <div class="flex flex-col justify-end items-end mt-7 space-y-6">
-                            <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
-                                <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
-                        <div class="mx-10 mt-5 justify-center" style="display: flex; justify-content: center; align-items: center; width: 100px; height: 100px; background-color: #FF9900;"></div>
-                        <div class="flex flex-col justify-end items-end mt-7 space-y-6">
-                            <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
-                                <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
-                        <div class="mx-10 mt-5 justify-center" style="display: flex; justify-content: center; align-items: center; width: 100px; height: 100px; background-color: #3CB24F;"></div>
-                        <div class="flex flex-col justify-end items-end mt-7 space-y-6">
-                            <a class="mt-3 mx-5" style="color:#3CB24F">User1</a>
-                            <span class="badge badge-custom mx-1" style="font-size: small; background-color: black; color: #03fa6e; border: 2px solid #03fa6e; border-radius: 6px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 75px; height: 50px; padding: 10px; background-color: black; color: #03fa6e;">
-                                <span style="display: block; line-height: 0px; font-size: 3px;">BUY</span>
+<!--                    -->
+                    <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7"
+                         th:each="font:${items['fonts']}"
+                         th:if="${!#strings.equals(font.name, 'basic')}">
+                        <div >
+                            <!--색상 아이템 추가-->
+                            <div class="mx-3 mt-5 w-[100px] h-[100px] flex justify-center items-center"
+                                 th:style="'background-color: #'+${font.pattern}+';'"></div>
+                            <div  class="flex flex-col justify-end items-start mt-7 space-y-6">
+                                <span th:text="${font.price}"
+                                      class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
+                                <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" th:onclick="'showBuy('+${font.id}+')'">
+                                    <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -129,7 +126,7 @@
                         </a>
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -142,7 +139,7 @@
                         </a>
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -155,7 +152,7 @@
                         </a>
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -168,7 +165,7 @@
                         </a>
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -181,7 +178,7 @@
                         </a>
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -198,7 +195,7 @@
                     <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -206,7 +203,7 @@
                     <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -214,7 +211,7 @@
                     <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -222,7 +219,7 @@
                     <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -230,7 +227,7 @@
                     <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
